--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
   font-family: "Teko", sans-serif;
+  margin: 0 auto;
+  width: 600px;
+  text-align: left;
 }
 
 .container {
@@ -7,12 +10,12 @@
   box-shadow: 3px 5px 10px #e9b9b9;
   background-color: whitesmoke;
   border-radius: 2px;
-  max-width: 40%;
+  max-width: 30%;
   margin: 0 auto;
   padding: 20px;
+  text-align: left;
 }
 
 .Footer {
-  text-align: center;
   margin: 10px;
 }
