--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,10 +1,11 @@
-input {
+.Weather input {
   font-family: "Dosis", sans-serif;
-  margin: 10px;
+  font-size: 15px;
   box-shadow: 2px 3px #e9b9b9;
+  margin-left: 21px;
 }
 .Weather h1 {
-  font-size: 50px;
+  font-size: 60px;
   font-weight: 200;
   line-height: 28.8px;
   display: block;
@@ -23,10 +24,14 @@ input {
   font-size: 100px;
   font-weight: 400;
 }
-.Weather img {
-  float: left;
-  height: 100px;
-}
+
 .Weather .unit {
   font-size: 30px;
+}
+
+.Weather .WeatherInfo canvas {
+  float: left;
+  margin-right: 10px;
+  height: 100px;
+  padding: 5px;
 }
